Fix faux italic on mobile

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ strong {
 i {
     transition: all 0.2s ease-in-out;
     font-family: "Fizz Italic";
-    font-style: italic;
+    font-style: normal;
 }
 
 a:hover {
